--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
                             <div class="scrollspy-menu">
 
                                 <ul class="menu nav clearfix" id="menu">
-                                    <li class="active"><a href="#home">Home</a></li>
-                                    <li><a href="#about">About</a></li>
-                                    <li><a href="#services">Services</a></li>
-                                    <li><a href="#footer">Contact</a></li>
+                                    <li class="active"><a href="#home">首页</a></li>
+                                    <li><a href="#about">关于我们</a></li>
+                                    <li><a href="#services">服务</a></li>
+                                    <li><a href="#footer">联系我们</a></li>
+                                    <li><a href="https://office.biz">En</a></li>
                                 </ul>
 
                             </div><!-- onepage-menu -->
@@ -116,10 +117,10 @@
                     	<div class="row">
                         	<div class="col-sm-12">
 
-                                <h1 class="text-center wow fadeInDown">Office Business</h1>
+                                <h1 class="text-center wow fadeInDown">Office Business Limited</h1>
 
-                                <p class="text-center wow fadeInDown">Office Business Limited provides professional IT consultancy services. <br class="hidden-xs hidden-sm">
-                                We design IT architecture, data storage strategy, system services, and applications on web, mobile and social media.
+                                <p class="text-center wow fadeInDown">提供专业的IT咨询服务。 <br class="hidden-xs hidden-sm">
+                                我们设计IT架构、AI整合、数据存储策略、系统服务以及Web、移动和社交媒体上的应用程序。
                                 </p>
 
                                 <br>
@@ -141,8 +142,8 @@
                             <div class="headline style-3">
 
                                 <h5>Office Business Limited</h5>
-                                <h2>About Us</h2>
-                                <p>20+ years of IT experience</p>
+                                <h2></h2>
+                                <p>20多年的IT服务经验</p>
 
                             </div><!-- headline -->
 
@@ -154,12 +155,11 @@
                     <div class="row">
                         <div class="col-sm-6">
 
-                            <h3>Vision</h3>
+                            <h3>愿景</h3>
 
                             <br>
 
-                            <p>We enable business to make smarter IT decisions and provide unparallel system experiences
-                            via modern architecture design, scalable cloud technology, and agile application development.</p>
+                            <p>我们帮助企业做出更明智的IT决策，并通过现代架构设计、可扩展的云技术和敏捷应用程序开发提供无与伦比的系统体验。</p>
 
                             <p></p>
 
@@ -168,18 +168,17 @@
 
                             <div class="vertical-tabs">
                                 <ul class="nav nav-tabs">
-                                    <li class="active"><a href="#tab-1" data-toggle="tab">Architecture Design</a></li>
-                                    <li><a href="#tab-2" data-toggle="tab">Cloud Technology</a></li>
-                                    <li><a href="#tab-3" data-toggle="tab">Application Development</a></li>
+                                    <li class="active"><a href="#tab-1" data-toggle="tab">架构设计</a></li>
+                                    <li><a href="#tab-2" data-toggle="tab">云技术</a></li>
+                                    <li><a href="#tab-3" data-toggle="tab">应用程序开发</a></li>
                                 </ul>
 
                                  <div class="tab-content">
                                     <div class="tab-pane fade in active" id="tab-1">
 
-                                        <p class="text-uppercase"><strong>Architecture Design</strong></p>
+                                        <p class="text-uppercase"><strong>架构设计</strong></p>
 
-                                        <p>We advise enterprise to design IT architecture, build integration services, create application programming interface,
-                                        define system deployment and testing procedure, plan performance monitoring framework, and train IT teams.
+                                        <p>我们建议企业设计IT架构、AI整合、构建集成服务、创建应用程序编程接口、定义系统部署和测试流程、规划性能监控框架并培训IT团队。
                                         </p>
 
                                         <img src="images/about/tabs/image-1.jpg" alt="">
@@ -187,10 +186,9 @@
                                     </div><!-- tab-pane -->
                                     <div class="tab-pane fade" id="tab-2">
 
-                                        <p class="text-uppercase"><strong>Cloud Technology</strong></p>
+                                        <p class="text-uppercase"><strong>云技术</strong></p>
 
-                                        <p>Cloud is on-demand IT resources with flexible pricing. We assist business to choose, deploy and manage cloud services.
-                                        We provide solutions on Amazon, Aliyun, Cloudflare and other cloud service providers.
+                                        <p>云是按需提供的IT资源，具有灵活的定价。我们协助企业选择、部署和管理云服务。我们在亚马逊、阿里云、Cloudflare和其他云服务提供商上提供解决方案。
                                         </p>
 
                                         <img src="images/about/tabs/image-2.jpg" alt="">
@@ -198,10 +196,9 @@
                                     </div><!-- tab-pane -->
                                     <div class="tab-pane fade" id="tab-3">
 
-                                        <p class="text-uppercase"><strong>Application Development</strong></p>
+                                        <p class="text-uppercase"><strong>应用程序开发</strong></p>
 
-                                        <p>We work with professional development teams worldwide to build web, desktop, mobile (iOS, Android, Hybrid),
-                                        Weixin Mini Program and scripting applications.
+                                        <p>我们与全球专业开发团队合作，构建Web、桌面、移动（iOS、Android、Hybrid）、微信小程序和脚本应用程序。
                                         </p>
 
                                         <img src="images/about/tabs/image-3.jpg" alt="">
@@ -226,9 +223,9 @@
 
                             <div class="headline style-3">
 
-                                <h5>All in one</h5>
-                                <h2>Services</h2>
-                                <p>Total solution, single point of contact</p>
+                                <h5>全方位</h5>
+                                <h2>服务</h2>
+                                <p>一站式解决方案，单一联系点</p>
 
                             </div><!-- headline -->
 
@@ -246,9 +243,9 @@
 
 								<div class="services-boxes-content">
 
-									<h3><a href="single-service.html">Reliability</a></h3>
+									<h3><a href="single-service.html">可靠性</a></h3>
 
-									<p>We focus on business continuity and ensure the system, database, services, and applications are robust and reliable.</p>
+									<p>我们专注于业务连续性，确保系统、数据库、服务和应用程序的健壮性和可靠性。</p>
 
 								</div><!-- services-boxes-content -->
 
@@ -263,10 +260,9 @@
 
 								<div class="services-boxes-content">
 
-									<h3><a href="single-service.html">Full service</a></h3>
+									<h3><a href="single-service.html">全方位服务</a></h3>
 
-									<p>From enquiry to delivery, we provide comprehensive service to cover technology advisory, architecture design,
-                  system interfacing, application and service development, deployment and testing, training, and ongoing system monitoring.
+									<p>从咨询到交付，我们提供全面的服务，涵盖技术咨询、架构设计、系统接口、应用程序和服务开发、部署和测试、培训以及持续的系统监控。
                   </p>
 
 								</div><!-- services-boxes-content -->
@@ -287,10 +283,9 @@
 
 								<div class="services-boxes-content">
 
-									<h3><a href="single-service.html">Cost saving</a></h3>
+									<h3><a href="single-service.html">成本节约</a></h3>
 
-									<p>Building on top of modern technologies, we leverage the benefits of cloud services, platform-as-a-service, software-as-a-service, open source technologies,
-                    supervised outsourcing, tailor-made tools to save cost for you.
+									<p>基于现代技术，我们利用云服务、平台即服务、软件即服务、开源技术、监督外包、定制工具等优势为您节省成本。
                   </p>
 
 								</div><!-- services-boxes-content -->
@@ -306,10 +301,9 @@
 
 								<div class="services-boxes-content">
 
-									<h3><a href="single-service.html">Clear Roadmap</a></h3>
+									<h3><a href="single-service.html">清晰的路线图</a></h3>
 
-									<p>With extensive IT experience, we define clear roadmap and schedule for various projects. We commit to delivery date with
-                    project quality and user collaboration.
+									<p>凭借丰富的IT经验，我们为各种项目定义了清晰的路线图和时间表。我们致力于在项目质量和用户协作的前提下按时交付。
                   </p>
 
 								</div><!-- services-boxes-content -->
@@ -330,9 +324,9 @@
 
                 <div class="services-boxes-content">
 
-                  <h3><a href="single-service.html">Adhoc Support</a></h3>
+                  <h3><a href="single-service.html">快速支持</a></h3>
 
-									<p>We support systems we delivered. We can extend support service to 3rd-party systems and even legacy codes.
+									<p>们支持我们交付的系统。我们可以将支持服务扩展到第三方系统，甚至是遗留代码。
                   </p>
 
 								</div><!-- services-boxes-content -->
@@ -348,10 +342,9 @@
 
 								<div class="services-boxes-content">
 
-									<h3><a href="single-service.html">N Platforms</a></h3>
+									<h3><a href="single-service.html">N平台</a></h3>
 
-									<p>We have extensive experience on server-side technologies, database systems, networking technologies, application
-                    programming interfaces, and application development on web, mobile, hybrid and Weixin Mini Programs.
+									<p>我们在服务器端技术、数据库系统、网络技术、应用程序编程接口以及Web、移动、Hybrid和微信小程序的应用程序开发方面拥有丰富的经验。
                   </p>
 
 								</div><!-- services-boxes-content -->
@@ -402,21 +395,21 @@
 
                             <div class="widget widget-contact">
 
-                                <h3 class="widget-title">Contact Us</h3>
+                                <h3 class="widget-title">联系我们</h3>
 
                                 <ul>
                                     <li>
-                                        <span>Address</span>
-                                        1701, 17/F, Wai Fung Plaza,<br>
-                                        664 Nathan Road, Mongkok<br>
-                                        Hong Kong
+                                        <span>地址</span>
+                                        惠丰中心1701室<br>
+                                        弥敦道664号, 旺角<br>
+                                        香港
                                     </li>
                                     <li>
                                       <span>Whatsapp</span>
                                       +852 56078000
                                     </li>
                                     <li>
-                                        <span>E-mail</span>
+                                        <span>邮件</span>
                                         <a href="mailto:info@office.biz">info@office.biz</a>
                                     </li>
                                 </ul>
@@ -438,8 +431,8 @@
 
                             <div class="widget widget-text">
 
-                                <p class="last text-center">&copy; 2020 <span class="text-primary text-uppercase">Office Business Limited</span>
-                                <span class=""> All Rights Reserved.</span></p>
+                                <p class="last text-center">&copy; 2025 <span class="text-primary text-uppercase">Office Business Limited</span>
+                                <span class=""> 版权所有。</span></p>
 
                             </div><!-- widget-text -->
 
