--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                                         <p class="text-uppercase"><strong>架构设计</strong></p>
 
-                                        <p>我们建议企业设计IT架构、AI整合、构建集成服务、创建应用程序编程接口、定义系统部署和测试流程、规划性能监控框架并培训IT团队。
+                                        <p>我们協同企业设计IT架构、AI整合、构建集成服务、创建应用程序编程接口、定义系统部署和测试流程、规划性能监控框架并培训IT团队。
                                         </p>
 
                                         <img src="images/about/tabs/image-1.jpg" alt="">
@@ -245,7 +245,7 @@
 
 									<h3><a href="single-service.html">可靠性</a></h3>
 
-									<p>我们专注于业务连续性，确保系统、数据库、服务和应用程序的健壮性和可靠性。</p>
+									<p>我们专注于业务连续性，确保系统、数据库、服务和应用程序的健全性和可靠性。</p>
 
 								</div><!-- services-boxes-content -->
 
@@ -262,8 +262,7 @@
 
 									<h3><a href="single-service.html">全方位服务</a></h3>
 
-									<p>从咨询到交付，我们提供全面的服务，涵盖技术咨询、架构设计、系统接口、应用程序和服务开发、部署和测试、培训以及持续的系统监控。
-                  </p>
+									<p>从咨询到交付，我们提供全面的服务，涵盖技术咨询、架构设计、系统接口、应用程序和服务开发、部署和测试、培训以及持续的系统监控。</p>
 
 								</div><!-- services-boxes-content -->
 
@@ -285,8 +284,7 @@
 
 									<h3><a href="single-service.html">成本节约</a></h3>
 
-									<p>基于现代技术，我们利用云服务、平台即服务、软件即服务、开源技术、监督外包、定制工具等优势为您节省成本。
-                  </p>
+									<p>基于现代技术，我们利用云服务、平台即服务、软件即服务、开源技术、监督外包、定制工具等优势为您节省成本。</p>
 
 								</div><!-- services-boxes-content -->
 
@@ -303,8 +301,7 @@
 
 									<h3><a href="single-service.html">清晰的路线图</a></h3>
 
-									<p>凭借丰富的IT经验，我们为各种项目定义了清晰的路线图和时间表。我们致力于在项目质量和用户协作的前提下按时交付。
-                  </p>
+									<p>凭借丰富的IT经验，我们为各种项目定义了清晰的路线图和时间表。我们致力于在项目质量和用户协作的前提下按时交付。</p>
 
 								</div><!-- services-boxes-content -->
 
@@ -326,8 +323,7 @@
 
                   <h3><a href="single-service.html">快速支持</a></h3>
 
-									<p>们支持我们交付的系统。我们可以将支持服务扩展到第三方系统，甚至是遗留代码。
-                  </p>
+									<p>我们持续维护交付的系统。我们可以将支持服务扩展到第三方系统，托管丶更新代码。</p>
 
 								</div><!-- services-boxes-content -->
 
@@ -344,8 +340,7 @@
 
 									<h3><a href="single-service.html">N平台</a></h3>
 
-									<p>我们在服务器端技术、数据库系统、网络技术、应用程序编程接口以及Web、移动、Hybrid和微信小程序的应用程序开发方面拥有丰富的经验。
-                  </p>
+									<p>我们在服务器端技术、数据库系统、网络技术、应用程序编程接口以及Web、移动、Hybrid和微信小程序的应用程序开发方面拥有丰富的经验。</p>
 
 								</div><!-- services-boxes-content -->
 
