--- a/index.html
+++ b/index.html
@@ -426,8 +426,11 @@
 
                             <div class="widget widget-text">
 
-                                <p class="last text-center">&copy; 2025 <span class="text-primary text-uppercase">Office Business Limited</span>
-                                <span class=""> 版权所有。</span></p>
+                                <p class="last text-center">&copy; 2025 
+                                    <span class="text-primary text-uppercase">Office Business Limited</span>
+                                    <span class=""> 版权所有。</span>
+                                    <a href="https://beian.miit.gov.cn/" target="_blank" class="underline"><span class="text-primary text-uppercase underline">粤ICP备2023094157号</span></a>
+                                </p>
 
                             </div><!-- widget-text -->
 
