update about us

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="headline style-3">
 
                                 <h5>Office Business Limited</h5>
-                                <h2></h2>
+                                <h2>关于我们</h2>
                                 <p>20多年的IT服务经验</p>
 
                             </div><!-- headline -->
